public/scss/app-dark.scss
@import "components/all";

body {
  background-color: $black-darker;
}

.main-container {
  background: $black-dark;
}

.card-header, .card-footer {
  background-color: $black-lightest;
}

.card {
  background-color: $black-light;
  color: $grey-lightest;
}

.form-label {
  color: $grey-lighter !important;
}

.modal-content {
  background-color: $black-lightest;
}

.modal-header {
  border-bottom: 1px solid $grey-darker;
}

.modal-footer {
  border-top: 1px solid $grey-darker;
}

